--- a/qingwei/AndroidManifest.xml
+++ b/qingwei/AndroidManifest.xml
@@ -26,7 +26,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.argon.wenfeng.activity.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,7 +44,8 @@
         </activity>
         <activity
             android:name="com.argon.wenfeng.activity.ItemDetailActivity"
-            android:label="@string/title_activity_item" >
+            android:label="@string/title_activity_item"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
