--- a/qingwei/project.properties
+++ b/qingwei/project.properties
@@ -12,6 +12,8 @@
 
 # Project target.
 target=android-16
-android.library.reference.1=../../../../android/taobao/top_android_sdk_1.0.1/TopAndroid
-android.library.reference.2=../../../../android/JakeWharton-ActionBarSherlock-e5c2d1c/library
-android.library.reference.3=../../../../android/cwac-endless-master
+android.library.reference.1=..\\..\\..\\..\\android\\taobao\\top_android_sdk_1.0.1\\TopAndroid
+android.library.reference.2=..\\..\\..\\..\\android\\JakeWharton-ActionBarSherlock-e5c2d1c\\library
+android.library.reference.3=..\\..\\..\\..\\android\\cwac-endless-master
+android.library.reference.4=../../ActionBarSherlock/library
+android.library.reference.5=../../../../Desktop/top_android_sdk_1.0.1/TopAndroid
