--- a/qingwei/project.properties
+++ b/qingwei/project.properties
@@ -15,3 +15,4 @@ target=android-16
 android.library.reference.1=../../../../android/taobao/top_android_sdk_1.0.1/TopAndroid
 android.library.reference.2=../../../../android/JakeWharton-ActionBarSherlock-e5c2d1c/library
 android.library.reference.3=../../../../android/cwac-endless-master
+android.library.reference.4=../../../../android/cardsui-for-android-master/CardsUILib
